trunk/Archive2/5b/1948967b35dfac/main.cpp
typedef struct element element;
void dostuff (element sv[]) { }

int main() {
}
